--- a/css/scss/page-sections/header.scss
+++ b/css/scss/page-sections/header.scss
@@ -1,17 +1,22 @@
 /* header
 ----------------------------------------------------------------------------- */
 header {
-	position: fixed;
+	
 	width: 100%;
 	min-height: 75px;
 	padding-top: 1rem;
 	box-shadow: 1px 1px 5px $light-grey;
 	background: $white;
-	z-index: 1000;
+	
 
 	// display: flex;
 	// 	align-items: center;
 	// 	justify-content: flex-end;
+
+	@include mq(1001px) {
+		position: fixed;
+		z-index: 1000;
+	}
 
 	.top {
 		position: relative;
